--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -10,6 +10,11 @@
 
 
 /* shared style */
+.secondary-bg{
+
+    background-color: #FFF8F3;
+}
+
 .text-primary {
 
 color: #FD6E0A;
@@ -29,6 +34,19 @@ color: #FD6E0A;
     border: none;
 
 }
+
+.section-title{
+    font-size: 35px;
+    font-weight: bold;
+    color: #181818
+
+}
+
+.section-description{
+    font-size: 18px;
+    color: #757575;
+}
+/* Nav style */
 nav ul{
     display: flex;
     align-items: center;
@@ -85,4 +103,30 @@ nav {
 .banner-description{
     font-weight: normal;
     font-size: 18px;
+}
+/* main styles */
+main{
+    max-width: 1140px;
+    margin: 0 auto 0 auto;
+}
+
+/* about styles */
+.about{
+    border-radius: 10px;
+    padding: 131px 156px 131px 156px;
+    text-align: center;
+}
+
+.about-items{
+    display: flex;
+    justify-content: space-around;
+   
+}
+.item-description{
+    font-weight: bold;
+    font-size: 20px;
+    color: #474747;
+    
+    
+
 }
