--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -59,13 +59,10 @@ nav ul li{
     list-style: none;
     margin-right: 51px;
 }
-/* header */
-.header{
-    background-image: url('../images/developer.png'), url('../images/header_bg.png');
-    background-repeat: no-repeat;
-    background-position: top left, bottom right;
-}
 
+.text-center{
+    text-align: center;
+}
 
 
 /* Nav Styles */
@@ -80,6 +77,15 @@ nav {
     font-weight: 800;
     font-size: 40px;
 }
+
+/* header */
+.header{
+    background-image: url('../images/developer.png'), url('../images/header_bg.png');
+    background-repeat: no-repeat;
+    background-position: top left, bottom right;
+}
+
+/* Banner Styles */
 .banner{
     display: flex;
     justify-content: space-between;
@@ -104,12 +110,17 @@ nav {
     font-weight: normal;
     font-size: 18px;
 }
+
+
 /* main styles */
 main{
     max-width: 1140px;
     margin: 0 auto 0 auto;
 }
 
+main section{
+    margin: 130px
+}
 /* about styles */
 .about{
     border-radius: 10px;
@@ -126,7 +137,19 @@ main{
     font-weight: bold;
     font-size: 20px;
     color: #474747;
-    
-    
 
+
+}
+/* Skills styles*/
+.skills-container{
+    display: flex;
+   gap: 24px;
+
+}
+
+.skill{
+    padding: 30px 33px 30px 33px;
+    border-radius: 5px;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06)
+    
 }
