--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -38,7 +38,8 @@ color: #FD6E0A;
 .section-title{
     font-size: 35px;
     font-weight: bold;
-    color: #181818
+    color: #181818;
+    
 
 }
 
@@ -151,5 +152,64 @@ main section{
     padding: 30px 33px 30px 33px;
     border-radius: 5px;
     box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06)
+
+}
+
+/* Resume Section Styles */
+.resume{
+    text-align: center;
+}
+.resume-container{
+    display: flex;
+    gap: 24px;
+}
+
+.experience-title{
+font-weight: bold;
+font-size: 25px;
+color: #474747;
+}
+
+.experience-sub-title{
+font-weight: 600;
+font-size: 20px;
+color: #757575;
+margin-bottom: 20px;
+
+}
+
+.experience-description{
+    color: #757575;
+    font-size: 18px;
+}
+
+.resume hr{
+    margin: 30px 5px;
+}
+
+.resume-download-cv{
+    margin-top: 50px;
+}
+
+/* footer styles */
+footer{
+    display: flex;
+    gap: 100px;
+    padding: 130px 230px;
+}
+
+.footer-column{
+    width: 50%;
+}
+
+footer input[type="text"], footer input[type="email"], footer textarea {
+    height: 64px;
+    border-radius: 5px;
+    background-color: white;
+    display: block;
+    width: 100%;
+    padding: 18px 30px;
+    margin-bottom: 24px;
+    border: none;
     
 }
