--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -144,15 +144,31 @@ main section{
 /* Skills styles*/
 .skills-container{
     display: flex;
-   gap: 24px;
+   gap: 1px;
+  height: auto;
+   max-width: 1140px;
+   border-radius: 5px;
+    margin-top: 50px;
+    padding-top: 104px;
+    
+
 
 }
 
 .skill{
-    padding: 30px 33px 30px 33px;
-    border-radius: 5px;
-    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06)
+    font-size: 15px;
+    padding: 18px 33px 30px 33px;
+    background-color: #fff;
+    border-radius: 20px;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
 
+}
+
+.skill-description{
+    color: #757575;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: normal;
 }
 
 /* Resume Section Styles */
