--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -90,7 +90,7 @@ nav {
 .banner{
     display: flex;
     justify-content: space-between;
-    margin: 0 35px 0 230px;
+    margin: 0 35px 0 230px
 }
 .banner-content{
     max-width: 580px;
@@ -208,12 +208,20 @@ margin-bottom: 20px;
 }
 
 /* footer styles */
-footer{
-    display: flex;
+footer {
+   
     gap: 100px;
     padding: 130px 230px;
 }
 
+.footer-container {
+    display: flex;
+    gap: 100px;
+    margin-bottom: 50px; 
+    padding: 130px 230px;
+}
+    
+    
 .footer-column{
     width: 50%;
 }
@@ -228,4 +236,9 @@ footer input[type="text"], footer input[type="email"], footer textarea {
     margin-bottom: 24px;
     border: none;
     
+}
+.copyright-section{
+
+    font-size: small;
+    text-align: center;
 }
